--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -8,7 +8,7 @@ content_blocks:
       Strategist</strong> from Albany. I work as a lifestyle, product, and
       landscape photographer, creating images for a diverse range of requests,
       from online media to printed artwork.</p>
-    image: /images/01.jpg
+    image: images/01.jpg
     image_alt: Vanessa Marley's picture
     cta_button: Get in touch
     cta_button_link: "#contact"
@@ -19,7 +19,7 @@ content_blocks:
     description_html: >-
       <p>I show only my best works built completely with passion, simplicity,
       and creativity!</p>
-    link_url: /projects
+    link_url: projects
     show_projects: true
   - _bookshop_name: testimonials-section
     title: Happy Clients
@@ -31,7 +31,7 @@ content_blocks:
       <p>Vonge blog features productivity, tips, inspiration and strategies for
       massive profits. Find out how to set up a successful blog or how to make
       yours even better!</p>
-    link_url: /blog
+    link_url: blog
     show_posts: true
   - _bookshop_name: newsletter
     newsletter_title: Join my mailing list
