--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -2,14 +2,15 @@
 title: Home
 content_blocks:
   - _bookshop_name: hero
-    title: Hi there, I am Vanessa Marley
+    title: Hi there, I am Anirudh
     description_html: >-
-      <p><strong>Photographer</strong> and <strong>Visual Content
-      Strategist</strong> from Albany. I work as a lifestyle, product, and
-      landscape photographer, creating images for a diverse range of requests,
-      from online media to printed artwork.</p>
+      <p><strong>Urban Designer</strong> and <strong>Planner</strong> with professional experience
+      in zoning reform, master planning, and public-sector planning projects across
+      New York State. My work sits at the intersection of urban design, public policy,
+      and community engagement, translating complex planning challenges into clear,
+      implementable strategies.</p>
     image: images/01.jpg
-    image_alt: Vanessa Marley's picture
+    image_alt: Urban Design & Planning work
     cta_button: Get in touch
     cta_button_link: "#contact"
     works_button: See my works
