--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -4,7 +4,7 @@ content_blocks:
   - _bookshop_name: hero
     title: Hi there, I am Anirudh
     description_html: >-
-      <p><strong>Urban Designer</strong> and <strong>Planner</strong> with professional experience
+      <p><strong>Urban Designer</strong> and <strong>City Planner</strong> with professional experience
       in zoning reform, master planning, and public-sector planning projects across
       New York State. My work sits at the intersection of urban design, public policy,
       and community engagement, translating complex planning challenges into clear,
