--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -13,37 +13,34 @@ content_blocks:
     image_alt: Urban Design & Planning work
     cta_button: Get in touch
     cta_button_link: "#contact"
-    works_button: See my works
+    works_button: See my work
     works_button_link: "#projects"
   - _bookshop_name: projects-section
-    title: Latest Works
+    title: Select Projects
     description_html: >-
-      <p>I show only my best works built completely with passion, simplicity,
-      and creativity!</p>
+      <p>Here's a selection of my work over the last 4 years</p>
     link_url: projects
     show_projects: true
   - _bookshop_name: testimonials-section
-    title: Happy Clients
+    title: Work Experience
     description_html:
     show_testimonials: true
   - _bookshop_name: blog-section
-    title: Recent Posts
+    title: Recent Thoughts
     description_html: >-
-      <p>Vonge blog features productivity, tips, inspiration and strategies for
-      massive profits. Find out how to set up a successful blog or how to make
-      yours even better!</p>
+      <p>This is a repository of my introspections on cities, people and whatever I've been thinking about lately.</p>
     link_url: blog
     show_posts: true
   - _bookshop_name: newsletter
     newsletter_title: Join my mailing list
-    newsletter_description: Get inspiration, updates and, cool stuff!
+    newsletter_description: My ruminations straight to your inbox.
     newsletter_identifier: >-
       frnla.us6.list-manage.com/subscribe/post?u=6314d69a3f315af7ce3fb00a0&amp;id=3038727cc3
     newsletter_button: Subscribe
   - _bookshop_name: contact-form
     form_title: Get in touch
-    form_description: Vonge comes with a built-in contact form.
-    form_submission_email: site@example.com
+    form_description: I would lvoe to chat!
+    form_submission_email: anirudhvenkat96@gmail.com
     form_button_text: Send now
 ---
 
