--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -39,7 +39,7 @@ content_blocks:
     newsletter_button: Subscribe
   - _bookshop_name: contact-form
     form_title: Get in touch
-    form_description: I would lvoe to chat!
+    form_description: I would love to chat!
     form_submission_email: anirudhvenkat96@gmail.com
     form_button_text: Send now
 ---
