--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -4,11 +4,9 @@ content_blocks:
   - _bookshop_name: hero
     title: Hi there, I am Anirudh
     description_html: >-
-      <p><strong>Urban Designer</strong> and <strong>City Planner</strong> with professional experience
-      in zoning reform, master planning, and public-sector planning projects across
-      New York State. My work sits at the intersection of urban design, public policy,
-      and community engagement, translating complex planning challenges into clear,
-      implementable strategies.</p>
+      <p><strong>Urban Designer</strong> and <strong>City Planner</strong> focused on shaping equitable and resilient cities through zoning reform, master planning, and strategic public-sector work. 
+        I'm committed to translating complex regulatory, spatial, and community dynamics into actionable design frameworks that put people first and strengthen the civic realm.</p>
+
     image: images/01.jpg
     image_alt: Urban Design & Planning work
     cta_button: Get in touch
