--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -16,7 +16,14 @@ content_blocks:
   - _bookshop_name: projects-section
     title: Select Projects
     description_html: >-
-      <p>Here's a selection of my work over the last 4 years</p>
+  <p>
+    Here's a selection of my work over the last 4 years.
+    For my complete portfolio in PDF format,
+    <a href="/assets/portfolio/portfolio.pdf" download>
+      click here
+    </a>.
+  </p>
+
     link_url: projects
     show_projects: true
   - _bookshop_name: testimonials-section
