--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -4,48 +4,48 @@ content_blocks:
   - _bookshop_name: hero
     title: Hi there, I am Anirudh
     description_html: >-
-      <p><strong>Urban Designer</strong> and <strong>City Planner</strong> focused on shaping equitable and resilient cities through zoning reform, master planning, and strategic public-sector work. 
-        I'm committed to translating complex regulatory, spatial, and community dynamics into actionable design frameworks that put people first and strengthen the civic realm.</p>
-
-    image: images/01.jpg
+      <p><strong>Urban Designer</strong> and <strong>City Planner</strong> focused on shaping equitable and resilient cities through zoning reform, master planning, and strategic public-sector work.
+      I'm committed to translating complex regulatory, spatial, and community dynamics into actionable design frameworks that put people first and strengthen the civic realm.</p>
+    image: /images/01.jpg
     image_alt: Urban Design & Planning work
     cta_button: Get in touch
     cta_button_link: "#contact"
     works_button: See my work
     works_button_link: "#projects"
+
   - _bookshop_name: projects-section
     title: Select Projects
     description_html: >-
-  <p>
-    Here's a selection of my work over the last 4 years.
-    For my complete portfolio in PDF format,
-    <a href="/assets/portfolio/portfolio.pdf" download>
-      click here
-    </a>.
-  </p>
-
-    link_url: projects
+      <p>
+        Here's a selection of my work over the last 4 years.
+        For my complete portfolio in PDF format,
+        <a href="/assets/portfolio/portfolio.pdf" download>click here</a>.
+      </p>
+    link_url: /projects
     show_projects: true
+
   - _bookshop_name: testimonials-section
     title: Work Experience
     description_html:
     show_testimonials: true
+
   - _bookshop_name: blog-section
     title: Recent Thoughts
     description_html: >-
       <p>This is a repository of my introspections on cities, people and whatever I've been thinking about lately.</p>
-    link_url: blog
+    link_url: /blog
     show_posts: true
+
   - _bookshop_name: newsletter
     newsletter_title: Join my mailing list
     newsletter_description: My ruminations straight to your inbox.
     newsletter_identifier: >-
       frnla.us6.list-manage.com/subscribe/post?u=6314d69a3f315af7ce3fb00a0&amp;id=3038727cc3
     newsletter_button: Subscribe
+
   - _bookshop_name: contact-form
     form_title: Get in touch
     form_description: I would love to chat!
     form_submission_email: anirudhvenkat96@gmail.com
     form_button_text: Send now
 ---
-
