--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -6,7 +6,7 @@ content_blocks:
     description_html: >-
       <p><strong>Urban Designer</strong> and <strong>City Planner</strong> focused on shaping equitable and resilient cities through zoning reform, master planning, and strategic public-sector work.
       I'm committed to translating complex regulatory, spatial, and community dynamics into actionable design frameworks that put people first and strengthen the civic realm.</p>
-    image: /images/01.jpg
+    image: "{{ '/images/01.jpg' | relative_url }}"
     image_alt: Urban Design & Planning work
     cta_button: Get in touch
     cta_button_link: "#contact"
