--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -6,9 +6,7 @@ content_blocks:
     description_html: >-
       <p><strong>Urban Designer</strong> and <strong>City Planner</strong> focused on shaping equitable and resilient cities through zoning reform, master planning, and strategic public-sector work.
       I'm committed to translating complex regulatory, spatial, and community dynamics into actionable design frameworks that put people first and strengthen the civic realm.</p>
-     image: "{{ '/images/01.jpg' | relative_url }}"
-
-
+    image: "{{ '/images/01.jpg' | relative_url }}"
     image_alt: Urban Design & Planning work
     cta_button: Get in touch
     cta_button_link: "#contact"
@@ -18,14 +16,11 @@ content_blocks:
   - _bookshop_name: projects-section
     title: Select Projects
     description_html: >-
-  <p>
-    Here's a selection of my work over the last 4 years.<br>
-    For my complete portfolio in PDF format,
-    <a href="/assets/portfolio/portfolio.pdf" download>
-      click here
-    </a>.
-  </p>
-
+      <p>
+        Here's a selection of my work over the last 4 years.<br>
+        For my complete portfolio in PDF format,
+        <a href="/assets/portfolio/portfolio.pdf" download>click here</a>.
+      </p>
     link_url: /projects
     show_projects: true
 
