--- a/site/collections/_pages/about.html
+++ b/site/collections/_pages/about.html
@@ -1,12 +1,17 @@
 ---
 title: About
+permalink: /about/
+layout: default
+
 content_blocks:
   - _bookshop_name: page-heading
     title: About
     description:
+
   - _bookshop_name: page-image
     image: /images/page-1.jpg
     image_alt: My best photo
+
   - _bookshop_name: content
     content_html: >-
       <p>In omni enim arte vel studio vel quavis scientia velas in ipsa virtute
@@ -19,10 +24,13 @@ content_blocks:
       si dederis, danda sunt omnia. Longum est enim ad omnia respondere, quae a
       te dicta sunt. Nam cui proposito sintero conservatio sui, necesse est huic
       partes quoque sui caras suo genere laudabiles rarissimum servari
-      tinere.</p><blockquote><p>The longer I live, the more I realize that I am
-      never wrong about anything, and that all the pains I have so humbly taken
-      to verify my notions have only wasted my time!</p></blockquote><p>Ego
-      quoque, inquit, didicerim libentius si quid attuleris, quam te
+      tinere.</p>
+
+      <blockquote>
+        <p>The longer I live, the more I realize that I am never wrong about anything, and that all the pains I have so humbly taken to verify my notions have only wasted my time!</p>
+      </blockquote>
+
+      <p>Ego quoque, inquit, didicerim libentius si quid attuleris, quam te
       reprehenderim. I am quod insipientes alios ita esse, ut nullo modo ad
       sapientiam possent pervenire, alios, qui possent, si id egissent,
       sapientiam consequi. Id quaeris, inquam, in quo, utrum respondero, verses
@@ -35,11 +43,4 @@ content_blocks:
       plurimas gentis cantibus arbitramur, primarium populi fuisse, quod
       praestantissimus fuisset in conficiendis disseretur voluptatibus. Utram
       tandem linguam nescio. Quod dicit Epicurus voluptate terra perfectio.</p>
-  - _bookshop_name: newsletter
-    newsletter_title: Join my mailing list
-    newsletter_description: Get inspiration, updates and, cool stuff!
-    newsletter_identifier: >-
-      frnla.us6.list-manage.com/subscribe/post?u=6314d69a3f315af7ce3fb00a0&amp;id=3038727cc3
-    newsletter_button: Subscribe
 ---
-
