--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -19,9 +19,10 @@ content_blocks:
       <p>
         Here's a selection of my work over the last 4 years.<br>
         For my complete portfolio in PDF format,
-        <a href="/assets/portfolio/portfolio.pdf" download class="portfolio-link">
+        <a href="{{ '/assets/portfolio/portfolio.pdf' | relative_url }}" download class="portfolio-link">
           click here
         </a>
+
       </p>
     link_url: /projects
     show_projects: true
