--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -19,12 +19,12 @@ content_blocks:
       <p>
         Here's a selection of my work over the last 4 years.<br>
         For my complete portfolio in PDF format,
-        <a href="{{ '/assets/portfolio/portfolio.pdf' | relative_url }}" download class="portfolio-link">
-          click here
-        </a>
-
+        <a href="{{ '/assets/portfolio/portfolio.pdf' | relative_url }}"
+           target="_blank"
+           rel="noopener"
+           class="portfolio-link">click here</a>.
       </p>
-    link_url: /projects
+    link_url: /projects/
     show_projects: true
 
   - _bookshop_name: testimonials-section
@@ -36,7 +36,7 @@ content_blocks:
     title: Recent Thoughts
     description_html: >-
       <p>This is a repository of my introspections on cities, people and whatever I've been thinking about lately.</p>
-    link_url: /blog
+    link_url: /blog/
     show_posts: true
 
   - _bookshop_name: contact-form
