--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -19,10 +19,12 @@ content_blocks:
       <p>
         Here's a selection of my work over the last 4 years.<br>
         For my complete portfolio in PDF format,
-        <a href="{{ '/assets/portfolio/portfolio.pdf' | relative_url }}"
+        <a href="https://anirudhvenkat96.github.io/Portfolio3/assets/portfolio/portfolio.pdf"
            target="_blank"
            rel="noopener"
-           class="portfolio-link">click here</a>.
+           class="portfolio-link">
+          click here
+        </a>.
       </p>
     link_url: /projects/
     show_projects: true
