--- a/site/collections/_pages/about.html
+++ b/site/collections/_pages/about.html
@@ -9,38 +9,26 @@ content_blocks:
     description:
 
   - _bookshop_name: page-image
-    image: /images/page-1.jpg
-    image_alt: My best photo
+    image: /images/about01.jpg
+    image_alt: Me at work
 
   - _bookshop_name: content
     content_html: >-
-      <p>In omni enim arte vel studio vel quavis scientia velas in ipsa virtute
-      optimum quidque est. Quod est, ut dixi, habere ea, quae secundum naturam
-      sint, vel omnia vel plurima et maxima. Quodsi ipsam honestatem undique
-      pertectam atque absolutam. Tecum optime, deindestum etiam cum mediocri
-      amico. Neque enim disputari sine reprehensione nec cum iracundia aut
-      pertinacia recte disputari potest. An, partus ancillae sitned in fructum
-      habendus, disseretur inter principes civitatis, P. Ut in geometria, prima
-      si dederis, danda sunt omnia. Longum est enim ad omnia respondere, quae a
-      te dicta sunt. Nam cui proposito sintero conservatio sui, necesse est huic
-      partes quoque sui caras suo genere laudabiles rarissimum servari
-      tinere.</p>
-
+      <p>In 2021, I graduated from Columbia University in the City of New York with a masters degree in Urban Design. 
+      I was inspired and ready to make the world a better place by designing resilient and equitable urban environments for the communities I would serve. 
+      For the next three years in Sasaki, I found the ideal training grounds to take my idealism and arm it with  
+      the tools, work ethic and understanding of the industry that would help me find the best solutions for people and their living envirnments in a diverse range of places.
+      </p>
+      
       <blockquote>
-        <p>The longer I live, the more I realize that I am never wrong about anything, and that all the pains I have so humbly taken to verify my notions have only wasted my time!</p>
+        <p>As an Urban Designer & Planner, I strive to uplift communities through design that puts people first. I am 
+          dedicated to understanding and responding to the socioeconomic history of places that my work will impact.
+        </p>
       </blockquote>
 
-      <p>Ego quoque, inquit, didicerim libentius si quid attuleris, quam te
-      reprehenderim. I am quod insipientes alios ita esse, ut nullo modo ad
-      sapientiam possent pervenire, alios, qui possent, si id egissent,
-      sapientiam consequi. Id quaeris, inquam, in quo, utrum respondero, verses
-      te huc atque illuc necesse est. Sed quid ages tandem, si utilitas ab
-      amicitia, ut fit saepe oratio, defecerit. Sed isti ipsi, qui voluptate et
-      dolore omnia metiuntur, nonne clamant sapienti plus semper adesse quod
-      velit quam quod nolit. Quae quidem sapientes sequuntur duce natura tamquam
-      videntes. Quod enim dissolutum sit, id esse sine sensu, quod autem sine
-      sensu sit, id nihil ad nos pertinere omnino. Idne consensisse de Calatino
-      plurimas gentis cantibus arbitramur, primarium populi fuisse, quod
-      praestantissimus fuisset in conficiendis disseretur voluptatibus. Utram
-      tandem linguam nescio. Quod dicit Epicurus voluptate terra perfectio.</p>
+      <p>In 2025, I joined Fisher Associates in Rochester NY. Moving to a city that is much different from New York and Boston was an eye opening experience.
+      I now have a better understanding of the ground realities of American urbanism. Working with smaller budgets in towns that desperately need economic and social revitalization helped
+        me become a designer who is hyper aware of what it takes to get a project from the drawing board to the construction site and do it is a way that is respectful to the
+        concerns and sensitivities of the local area.      
+      </p>
 ---
