--- a/site/collections/_pages/about.html
+++ b/site/collections/_pages/about.html
@@ -6,29 +6,21 @@ layout: default
 content_blocks:
   - _bookshop_name: page-heading
     title: About
-    description:
+    description: Urban designer and city planner focused on equitable, resilient, people-first places.
 
   - _bookshop_name: page-image
-    image: /images/about01.jpg
-    image_alt: Me at work
+    image: images/about01.jpg
+    image_alt: Anirudh at work
 
   - _bookshop_name: content
     content_html: >-
-      <p>In 2021, I graduated from Columbia University in the City of New York with a masters degree in Urban Design. 
-      I was inspired and ready to make the world a better place by designing resilient and equitable urban environments for the communities I would serve. 
-      For the next three years in Sasaki, I found the ideal training grounds to take my idealism and arm it with  
-      the tools, work ethic and understanding of the industry that would help me find the best solutions for people and their living envirnments in a diverse range of places.
-      </p>
-      
+      <p>In 2021, I graduated from Columbia University in the City of New York with a Master’s degree in Urban Design. I left inspired to help build more resilient and equitable urban environments for the communities my work would serve.</p>
+
+      <p>For the next three years at Sasaki, I found the ideal training ground to pair that idealism with the practical tools of the profession—rigorous design thinking, clear communication, and the discipline required to move complex projects from concept to implementation across a wide range of contexts.</p>
+
       <blockquote>
-        <p>As an Urban Designer & Planner, I strive to uplift communities through design that puts people first. I am 
-          dedicated to understanding and responding to the socioeconomic history of places that my work will impact.
-        </p>
+        <p>As an Urban Designer &amp; Planner, I strive to uplift communities through design that puts people first. I’m committed to understanding the social and economic histories of the places my work will impact—and translating that understanding into thoughtful, durable, and actionable plans.</p>
       </blockquote>
 
-      <p>In 2025, I joined Fisher Associates in Rochester NY. Moving to a city that is much different from New York and Boston was an eye opening experience.
-      I now have a better understanding of the ground realities of American urbanism. Working with smaller budgets in towns that desperately need economic and social revitalization helped
-        me become a designer who is hyper aware of what it takes to get a project from the drawing board to the construction site and do it is a way that is respectful to the
-        concerns and sensitivities of the local area.      
-      </p>
+      <p>In 2025, I joined Fisher Associates in Rochester, NY. Working with towns and small cities—often with constrained budgets and urgent needs—sharpened my focus on feasibility and follow-through. It strengthened my understanding of what it takes to move from the drawing board to the construction site while staying responsive to local concerns, priorities, and sensitivities.</p>
 ---
