--- a/site/collections/_pages/about.html
+++ b/site/collections/_pages/about.html
@@ -9,7 +9,7 @@ content_blocks:
     description: Urban designer and city planner focused on equitable, resilient, people-first places.
 
   - _bookshop_name: page-image
-    image: images/about01.jpg
+    image: images/about01.png
     image_alt: Anirudh at work
 
   - _bookshop_name: content
