--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -1,11 +1,18 @@
 ---
 title: Home
+
 content_blocks:
   - _bookshop_name: hero
     title: Hi there, I am Anirudh
     description_html: >-
-      <p><strong>Urban Designer</strong> and <strong>City Planner</strong> focused on shaping equitable and resilient cities through zoning reform, master planning, and strategic public-sector work.
-      I'm committed to translating complex regulatory, spatial, and community dynamics into actionable design frameworks that put people first and strengthen the civic realm.</p>
+      <p>
+        <strong>Urban Designer</strong> and <strong>City Planner</strong>
+        focused on shaping equitable and resilient cities through zoning reform,
+        master planning, and strategic public-sector work.
+        I'm committed to translating complex regulatory, spatial, and community
+        dynamics into actionable design frameworks that put people first and
+        strengthen the civic realm.
+      </p>
     image: /images/01.jpg
     image_alt: Urban Design & Planning work
     cta_button: Get in touch
@@ -19,7 +26,7 @@ content_blocks:
       <p>
         Here's a selection of my work over the last 4 years.<br>
         For my complete portfolio in PDF format,
-        <a href="https://anirudhvenkat96.github.io/Portfolio3/assets/portfolio/portfolio.pdf"
+        <a href="{{ '/assets/portfolio/portfolio.pdf' | relative_url }}"
            target="_blank"
            rel="noopener"
            class="portfolio-link">
@@ -37,7 +44,10 @@ content_blocks:
   - _bookshop_name: blog-section
     title: Recent Thoughts
     description_html: >-
-      <p>This is a repository of my introspections on cities, people and whatever I've been thinking about lately.</p>
+      <p>
+        This is a repository of my introspections on cities, people,
+        and whatever I've been thinking about lately.
+      </p>
     link_url: /blog/
     show_posts: true
 
